# chatterbox-encoders

./: .gitignore  LLM_INPUT_GUIDE.md  README.md  README_STANDALONE.md  SETUP.md  STANDALONE_PACKAGE.md  cli.py  demo_standalone.py  download_weights.py  plot_reconstruction.py  plot_reconstruction_notebook.py  prepare_llm_inputs.py  prepare_llm_inputs_with_perceiver.py  pyproject.toml  reconstruct_manual.py  setup_standalone.py
audio/: decoder.py  emotion.py  perceiver.py  s3_tokenizer.py
chatterbox_encoders/: __init__.py  __main__.py
chatterbox_encoders/audio/: __init__.py  decoder.py  mel_extractor.py  speaker_projector.py  voice_encoder.py
chatterbox_encoders/audio/s3gen/: configs.py  s3gen.py
chatterbox_encoders/config/: defaults.py
chatterbox_encoders/pipelines/: __init__.py  standalone.py
chatterbox_encoders/text/: english_tokenizer.py  tokenizer_wrapper.py
chatterbox_encoders/text_analysis/: __init__.py  qwen_analyzer.py  text_encoder.py
chatterbox_encoders/utils/: __init__.py  audio.py  tokens.py
config/: __init__.py  constants.py  defaults.py
docs/: text_to_audio_embeddings.md
docs/superpowers/plans/: 2026-04-02-qwen-omni-audio-encoder.md  2026-04-02-text-to-audio-embeddings.md
docs/superpowers/specs/: 2026-04-02-qwen-omni-vllm-inference-design.md
pipelines/: reconstruction.py
scripts/: analyze_audio_with_qwen.py  prepare_training_data.py  train_text_encoder.py
tests/: conftest.py  test_qwen_analyzer.py  test_qwen_omni_encoder.py  test_text_encoder.py
text/: __init__.py  normalizer.py
utils/: device.py  loading.py
weights/: README.md
