[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatterbox-encoders"
version = "0.1.0"
description = "Audio → Speech Tokens → Audio reconstruction package"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "khursanirevo"}
]
keywords = ["audio", "speech", "reconstruction", "tokenizer", "encoder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "numpy>=1.24",
    "librosa>=0.10",
    "safetensors>=0.4",
    "huggingface-hub>=0.20",
    "soundfile>=0.12",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/khursanirevo/chatterbox-encoders"
Repository = "https://github.com/khursanirevo/chatterbox-encoders"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatterbox_encoders*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
